<resources>
    <string name="app_name">someBODY</string>
    <string name="select_your_weights">Select your weights!</string>
    <string name="the_lyrics_will_better_resemble_albums_or_songs_with_more_weight">(The lyrics will better resemble albums or songs with more weight)</string>
    <string name="generate">Generate lyrics</string>
    <string name="album_title_goes_here">album title goes here</string>
    <string name="yyyy">(YYYY)</string>
    <string name="album_weight_placeholder">Album weight: 1/5</string>
    <string name="delete_song_prompt">Delete \"%1$s\"?</string>
    <string name="cancel_changes_prompt">Cancel changes to \"%1$s\"?</string>
    <string name="album_weight_xxx">Album weight: %1$s/5</string>
    <string name="placeholder_lyrics">(Verse)\nYou\'re a frying pan la rio chinatown if\nyou realize i\'m just in tryin\'\nall the time i know your\n(Chorus)\nWoman i\'m doing what i hit the\nsun catches up the way she knows that\nshe will always get started and i can\nwith a room with\na believer i wanted sunshine i want\nsomeone anyone and they don\'t you\n(Verse)\nTripped and zen and we\'re kept\ndown but you\'re a trace of you\nthe tiger by the morning comes to find\n(Chorus)\nWoman i\'m doing what i hit the\nsun catches up the way she knows that\nshe will always get started and i can\nwith a room with\na believer i wanted sunshine i want\nsomeone anyone and they don\'t you</string>
    <string name="placeholder_title">My Smashterpiece</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="generate_again">Again!</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="your_very_own_generated_smash_mouth_song">Your very own generated Smash Mouth song:</string>
    <string name="generating_your_lyrics">Generating your lyrics…</string>
    <string name="save_your_song">Save your song!</string>
    <string name="lyrics_go_here">Your generated lyrics will go here!</string>
    <string name="give_your_song_a_title">Give your song a title</string>
    <string name="give_your_song_a_name">Please give your song a name</string>
    <string name="you_need_some_weight">Please give at least one album a weight</string>
    <string name="your_lyrics_are_ready">Your lyrics are ready for you in the \"Lyrics\" tab</string>
    <string name="you_need_to_generate_lyrics">Bruh you have to generate a song first</string>
    <string name="there_are_no_lyrics">These lyrics cannot be saved as they do not exist</string>
    <string name="cancel">Nope!</string>
    <string name="save_it">Save it!</string>
    <string name="song_saved">Song saved!</string>
    <string name="song_updated">Song updated!</string>
    <string name="your_masterpieces">Your Smashterpieces:</string>
    <string name="song_title_placeholder">song title placeholder</string>
    <string name="song_lyrics_placeholder">song lyrics placeholder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_the_app_works">How the app works</string>
    <string name="about_me">I made this app to strengthen my Android knowledge in pursuit of a career in Android development. If you have any questions or concerns, feel free to reach out to me at perozzi.n@gmail.com. Thanks for your time, and I hope you enjoy the app!</string>
    <string name="about_me_title">About the app</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_text">I don\'t own the rights to any Smash Mouth music please do not sue me I am not making any money from this app I promise</string>
    <string name="sue">Sue anyway</string>
    <string name="how_it_works">Each time the Generate Lyrics button is pressed, world-famous rock band Smash Mouth is notified and writes a completely personalized song in seconds based on which albums of theirs you prefer.</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="fine_tune">Feel free to fine tune the lyrics (and title) to your liking!</string>
    <string name="update_lyrics">Update lyrics</string>
    <string name="version_number">Version %1$s</string>
    <string name="copy_lyrics">Copy Lyrics</string>
    <string name="download_pitch">Download someBODY, the leading app for generating lyrics from worldwide hit sensation Smash Mouth!</string>
    <string name="your_saved_lyrics_will_show_up_here">Your saved lyrics will show up here!</string>
    <string name="response_not_successful">Response not successful</string>
    <string name="heck_yeah">Heck yeah</string>
    <string name="you_sure_you_want_to_delete">You sure you want to delete this absolute banger?</string>
    <string name="you_sure_you_want_to_cancel">Revert your changes to these lyrics?</string>
    <string name="cancel_cancel">Cancel</string>
</resources>