<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:padding="4dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/albumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/album_title_goes_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/albumYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yyyy"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumTitle"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/albumImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumYear"
            android:src="@drawable/alb_1_fush_yu_mang_97"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/albumWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/album_weight_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumImage"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            />


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/weightSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="1"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumWeight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>