<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weightAssignmentViewModel"
            type="com.perozzi_package.smashmouthsonggenerator.ui.album_weights.WeightAssignmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weightConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectWeightPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_weights"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectWeightDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/the_lyrics_will_better_resemble_albums_or_songs_with_more_weight"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectWeightPrompt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/selectWeightDescription"
                app:layout_constraintBottom_toTopOf="@id/generateLyricsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/generateLyricsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/generate"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadingIconConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/gray"
            android:visibility="gone"
            android:padding="20dp"
            android:paddingTop="-20dp"
            >


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loadingIcon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/generatingLyricsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/generatingLyricsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generating_your_lyrics"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:maxLines="1"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/loadingIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>